<resources>
    <string name="app_name">ExtraHW Android Lesson5</string>
    <string name="start">Начать игру</string>
    <string name="welcome">Давай поиграем</string>
    <string name="start_new_game">Начать новую игру</string>
    <string name="moves">Moves: 0000</string>
    <string name="time">Время: 00:00</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_13">13</string>
    <string name="_2">2</string>
    <string name="_6">6</string>
    <string name="_10">10</string>
    <string name="_14">14</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_11">11</string>
    <string name="_15">15</string>
    <string name="_4">4</string>
    <string name="_8">8</string>
    <string name="_12">12</string>
</resources>